[metadata]
name = envalidate
description = validating and accessing environment variables in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ozshalom/envalidate
author = oz shalom
maintainer = oz shalom
maintainer_email = oz.shalom0175@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: envalidate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = .env, dotenv, env, env var, environment, environment variable, validation
project_urls =
    Source=https://github.com/ozshalom/envalidate

[options]
packages = find:
install_requires =
    pydantic==1.8.2
python_requires='>=3.6'

[options.extras_require]
testing =
    pytest==6.0.1
    pytest-mock==3.3.1
    coverage==5.2.1
    pytest-cov==2.10.1
    pytest-lazy-fixture==0.6.3
    black
    tox==3.20.1
    pylint==2.6.0
    pylint-pytest~=1.1.2
    flake8==3.7.9
    bandit==1.7.0

[options.packages.find]
where = envalidate
